--- a/frontend/src/components/hotel-modal/hotel-modal.scss
+++ b/frontend/src/components/hotel-modal/hotel-modal.scss
@@ -35,6 +35,7 @@
     width: 40px;
     height: 40px;
     font-size: 24px;
+    color: #000;
     cursor: pointer;
     z-index: 10;
     display: flex;
@@ -139,6 +140,7 @@
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
             gap: 12px;
+            margin-bottom: 20px;
 
             .distance-item {
               display: flex;
@@ -156,6 +158,15 @@
               .distance-value {
                 color: #666;
               }
+            }
+          }
+
+          .map-section {
+            h4 {
+              font-size: 16px;
+              font-weight: 600;
+              color: #333;
+              margin: 0 0 12px 0;
             }
           }
         }
